--- a/Actitime-bdd-cucumber/pom.xml
+++ b/Actitime-bdd-cucumber/pom.xml
@@ -51,6 +51,13 @@
             <version>7.20.1</version>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/tech.grasshopper/extentreports-cucumber7-adapter -->
+        <dependency>
+            <groupId>tech.grasshopper</groupId>
+            <artifactId>extentreports-cucumber7-adapter</artifactId>
+            <version>1.14.0</version>
+        </dependency>
+
     </dependencies>
 
     <build>
